@@ -1,3 +1,10 @@
+Sat Jun 30 11:55:12 2007  Lee Noar  <leenoar@sky.com>
+
+	* sys/_syslib.s(__main): Using registers to receive data from
+	crt1-riscos is not very elegant and we can't use the stack as it
+	may not exist, so use a block of memory defined in crt1-riscos
+	instead.
+
 Tue Jun 19 20:00:43 2007  Lee Noar  <leenoar@sky.com>
 
 	* sys/_syslib.s(__main): Change below (r2667) did not solve
